# Copyright 2018 Bitwise IO
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bond-processor"
version = "0.1.0"
authors = ["Bitwise IO"]

[dependencies]
bond-common = { path = "../common"}
sawtooth_sdk = { git = "https://github.com/hyperledger/sawtooth-core.git" }
protobuf = "2.0"
rustc-serialize = "0.3.22"
clap = "2" 
log = "0.3.0"
log4rs = "0.7.0"
